Adding Admin form CSS

--- a/dbsettings/templates/dbsettings/app_settings.html
+++ b/dbsettings/templates/dbsettings/app_settings.html
@@ -2,7 +2,11 @@
 {% load i18n static %}
 {% load url from future %}
 
-{% block extrastyle %}{{ form.media }}{{ block.super }}<link rel="stylesheet" type="text/css" href="{% get_static_prefix %}admin/css/forms.css" />{% endblock %}
+{% block extrastyle %}
+{{ form.media }}{{ block.super }}
+<link rel="stylesheet" type="text/css" href="{% get_static_prefix %}admin/css/forms.css" />
+<link rel="stylesheet" type="text/css" href="{% get_static_prefix %}dbsettings/dbsettings-admin-style.css" />
+{% endblock %}
 
 {% block coltype %}colMS{% endblock %}
 {% block bodyclass %}dbsettings{% endblock %}
@@ -33,4 +37,3 @@
 {% endif %}
 </div>
 {% endblock %}
-
