--- a/dbsettings/templates/dbsettings/app_settings.html
+++ b/dbsettings/templates/dbsettings/app_settings.html
@@ -2,11 +2,7 @@
 {% load i18n static %}
 {% load url from future %}
 
-{% block extrastyle %}
-{{ form.media }}{{ block.super }}
-<link rel="stylesheet" type="text/css" href="{% get_static_prefix %}admin/css/forms.css" />
-<link rel="stylesheet" type="text/css" href="{% get_static_prefix %}dbsettings/dbsettings-admin-style.css" />
-{% endblock %}
+{% block extrastyle %}{{ block.super }}<link rel="stylesheet" type="text/css" href="{% get_static_prefix %}admin/css/forms.css" />{% endblock %}
 
 {% block coltype %}colMS{% endblock %}
 {% block bodyclass %}dbsettings{% endblock %}
@@ -28,7 +24,12 @@
 {% regroup form by class_name as classes %}
 <form enctype="multipart/form-data" method="post">
     {% for class in classes %}
+        <div class="module">
+        <table summary="{% filter capfirst %}{% blocktrans with class.grouper as name %}Settings included in the {{ name }} class.{% endblocktrans %}{% endfilter %}" width="100%">
+            <caption>{% filter capfirst %}{% if class.grouper %}{{ class.grouper }}{% else %}{% trans "Application settings" %}{% endif %}{% endfilter %}</caption>
             {% include "dbsettings/values.html" %}
+            </table>
+        </div>
     {% endfor %}
 {% csrf_token %}<input type="submit" value="Save" class="default" />
 </form>
